fix: simplify `KeyValueData` schema by replacing `DataValue` enum with `Value`, update OpenAPI and version to 1.0.21
